# my-first-substrate-project-series-III-part-8

./: README.md
my-first-client/: client.js  package.json
my-first-smart-contracts/: upload.instantiate.call.sh
my-first-smart-contracts/helloworld/: Cargo.toml  lib.rs
my-first-smart-contracts/helloworld2/: Cargo.toml  lib.rs
